# ontology-memory-llm

./: .coveragerc  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_QUALITY_ANALYSIS.md  CODE_REVIEW_INTERVIEW_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_OVERHAUL_SUMMARY.md  HEDGING_LANGUAGE_IMPLEMENTATION.md  Makefile  ProjectDescription.md  README.md  SYSTEM_FLOW_ACTUAL.md  alembic.ini  coverage.json  debug_scenario12.py  debug_scenario7.py  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  test_phase1a.py
.github/workflows/: ci.yml
archive/: ARCHITECTURAL_DEBT_REVIEW.md  ARCHITECTURE_SIMPLIFICATION.md  Architecture_Flow_Complete.md  Architecture_High_Level_Overview.md  Codebase_Structure_Guide.md  Comprehensive_User_Scenarios.md  DESIGN_SIMPLIFIED.md  ENTITY_RESOLUTION_DESIGN.md  FINAL_ARCHITECTURE_ASSESSMENT.md  First_Principles_Scenario_Evaluation.md  PHASE1_COMPLETION.md  Scenario_Coverage_Verification.md  System_Flow_Diagram.md  System_Flow_Diagram2.md  UX_Vision_and_Memory_Analysis.md
archive/architecture/: Architecture_Complete_Summary.md  Architecture_Intelligence_DecisionSupport.md  Architecture_Master.md  Architecture_Production_Operations.md
archive/demo/: IMPLEMENTATION_ROADMAP.md  OPTION3_IMPLEMENTATION_PLAN.md  PHASE_BC_ENHANCEMENTS.md  REMAINING_VISION.md  WEEK2_DEMO_README.md
archive/design/: ENTITY_RESOLUTION_COMPARISON.md
archive/implementation/: CODEBASE_QUALITY_REVIEW.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_PROJECT_REVIEW.md  COMPREHENSIVE_REVIEW_FIXES.md  DEMO_IMPROVEMENTS.md  E2E_PROGRESS_SUMMARY.md  E2E_TEST_IMPLEMENTATION_PLAN.md  FINAL_CODE_REVIEW_2025-10-15.md  FINAL_COMPLETION_REPORT.md  PHASE1B_COMPLETION.md  PHASE1C_COMPLETION_SUMMARY.md  PHASE1C_IMPLEMENTATION_SUMMARY.md  PHASE1C_QUALITY_VERIFICATION.md  PHASE1D_COMPLETION_SUMMARY.md  PHASE1D_VERIFICATION_SUMMARY.md  PHASE1_COMPLETION_PLAN.md  PHASE_1_2_COMPLETION_SUMMARY.md  PROGRESS_SUMMARY.md  REQUIREMENTS_GAP_ANALYSIS.md  STRATEGIC_IMPLEMENTATION_PLAN.md  WEEK1_COMPLETION.md  WEEK2_COMPLETION_SUMMARY.md
archive/quality/: DESIGN_ALIGNMENT_ANALYSIS.md
archive_2025_10_16/docs/: MIGRATION_GUIDE.md
archive_2025_10_16/root/: ARCHITECTURE_IMPROVEMENTS.md  DOCUMENTATION_PLAN.md  README.md  START_HERE.md
archive_2025_10_16/tests/: COMPLETION_SUMMARY.md  QUALITY_REVIEW.md
archive_legacy_docs/: DOCUMENTATION_INDEX.md
archive_legacy_docs/demo/: CHAT_INTERFACE_GUIDE.md  DEMO_ARCHITECTURE.md
archive_legacy_docs/design/: LEARNING_DESIGN.md  LLM_INTEGRATION_STRATEGY.md  RETRIEVAL_DESIGN.md
archive_legacy_docs/implementation/: E2E_TEST_STATUS.md  FRONTEND_ROADMAP.md  QUALITY_IMPROVEMENTS_FINAL.md
archive_legacy_docs/quality/: PHASE1_ROADMAP.md
archive_legacy_docs/reference/: HEURISTICS_CALIBRATION.md
archive_legacy_docs/root_docs/: PROJECT_SUMMARY.md
docs/: README.md  System_Flow_Diagram.md
docs/1_tutorials/: 01_quickstart.md
docs/3_explanation/: architecture_overview.md  conflict_resolution.md  cost_optimization.md
docs/4_reference/: api_reference.md  configuration_reference.md
docs/demo/: DEMO_ISOLATION_GUARANTEES.md  QUICK_START.md
docs/design/: API_DESIGN.md  ARCHITECTURE_RECOMMENDATIONS.md  ARCHIVE_DESIGN_EVOLUTION.md  DESIGN.md  ENTITY_RESOLUTION_DESIGN_V2.md  LIFECYCLE_DESIGN.md  LLM_FIRST_ARCHITECTURE.md  LLM_INTEGRATION_STRATEGY.md  importance_calculation.md
docs/getting-started/: QUICKSTART.md
docs/implementation/: BEAUTIFUL_SOLUTIONS_ANALYSIS.md  CODE_QUALITY_COMPLETION_REPORT.md  COMPREHENSIVE_CODE_REVIEW.md  DEMO_CODE_REVIEW.md  E2E_IMPLEMENTATION_COMPLETE.md  E2E_SCENARIOS_DESIGN.md  E2E_SCENARIOS_PROGRESS.md  E2E_SCENARIO_VERIFICATION_REPORT.md  FINAL_QUALITY_METRICS.md  PHASE1A_CODE_REVIEW.md  PHASE1A_COMPLETION.md  PHASE1A_IMPLEMENTATION_PLAN.md  PHASE1A_PROGRESS.md  PHASE1B_IMPLEMENTATION_PLAN.md  PHASE1D_IMPLEMENTATION_PLAN.md  PHASE1D_PLAN_ITERATION.md  PHASE1_STATUS.md  PHASE_1D_COMPLETE.md  PHASE_1_PROGRESS.md  PROGRESS_SUMMARY.md  REMAINING_LINTING_ANALYSIS.md  ROADMAP_TO_100_PERCENT.md  SCENARIO_CORRECTIONS_COMPLETE.md  VISION_VIOLATION_FIXES.md  WEEK2_COMPLETION.md  hybrid_semantic_memory.md
docs/quality/: IMPLEMENTATION_READINESS.md  PHASE1_ROADMAP.md  QUALITY_EVALUATION.md  TESTING_GAP_ANALYSIS.md  TESTING_PHILOSOPHY.md  TESTING_SUMMARY.md
docs/refactors/: REFACTOR_PROGRESS.md  triple_to_entity_tagged_refactor.md
docs/reference/: Model_Strategy.md
docs/vision/: VISION.md
frontend/: architecture_new.html  index.html
scripts/: acceptance.sh  acceptance_test.py  clean_test_data.sh  demo_e2e.py  init-db.sql  seed_data.py
src/api/: dependencies.py  main.py  (+1 more)
tests/: FINAL_VALIDATION.md  README.md  TESTING_CHECKLIST.md  conftest.py
(+177 files in other folders)
